--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -1,16 +1,17 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>蛙哥的社区</title>
+    <title>发布-蛙哥社区</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-theme.css">
+    <link rel="stylesheet" href="css/community.css">
     <script src="js/bootstrap.js" type="application/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="body">
 <!--<p th:text="'Hello, ' + ${name} + '!'" />-->
-<!--<导航栏>-->
+<!--导航栏-->
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -32,12 +33,7 @@
                 </div>
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li th:if="${session.user!=null}">
-                    <a href="/publish">
-                        发布
-                    </a>
-                </li>
+                <ul class="nav navbar-nav navbar-right">
                     <!--<div th:text="${session.user}"></div>-->
                     <li class="dropdown" th:if="${session.user!=null}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
@@ -50,16 +46,16 @@
                         </ul>
                     </li>
                     <li th:if="${session.user==null}"><a href="https://github.com/login/oauth/authorize?client_id=c7821da5e7e8a585cc79&redirect_uri=http://localhost:8887/callback&scope=user&state=1">登录</a></li>
-            </ul>
+                </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-
+<!--身体-->
 <div class="container-fluid main">
     <div class="row">
 
         <div class="col-lg-9 col-md-12 col-xs-12 col-sm-12">
-            <h2><span class="glyphicon glyphicon-list" aria-hidden="true">发现</span></h2>
+            <h2><span class="glyphicon glyphicon-hand-right" aria-hidden="true">发起</span></h2>
             <hr>
             <form action="/publish" method="post">
                 <div class="form-group">
@@ -79,7 +75,7 @@
 
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="alert alert-warning alert-dismissible col-lg-9 col-md-12 col-xs-12 col-sm-12" ></div>
+                        <div class="alert alert-warning alert-dismissible col-lg-9 col-md-12 col-xs-12 col-sm-12" th:text="${error}" th:if="${error}!=null"></div>
                         <div class="col-lg-3 col-md-12 col-xs-12 col-sm-12">
                             <button type="submit" class="btn btn-success btn-publish">发布</button>
                         </div>
@@ -93,7 +89,6 @@
             <h3>问题发起指南</h3>
             ·选择标签
         </div>
-
     </div>
 </div>
 </body>
