--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="css/bootstrap-theme.css">
     <script src="js/bootstrap.js" type="application/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/community.css">
 </head>
-<body>
+<body class="body">
 <!--<p th:text="'Hello, ' + ${name} + '!'" />-->
 <!--<导航栏>-->
 <nav class="navbar navbar-default">
@@ -21,7 +22,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">天才社区</a>
+            <a class="navbar-brand" href="/">天才社区</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -61,32 +62,19 @@
         <div class="col-lg-9 col-md-12 col-xs-12 col-sm-12">
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true">发现</span></h2>
             <hr>
-            <form action="/publish" method="post">
-                <div class="form-group">
-                    <label for="title">内容标题（简单扼要）</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="内容标题..">
+            <div class="media" th:each="question:${questions}">
+                <div class="media-left media-middle">
+                    <a href="#">
+                        <img class="media-object img-circle" th:src="${question.user.photo}">
+                    </a>
                 </div>
-
-                <div class="form-group">
-                    <label for="title">问题补充</label>
-                    <textarea class="form-control" name="description" id="description" cols="30" rows="10"></textarea>
+                <div class="media-body">
+                    <h4 class="media-heading">如何快速学习Spring Boot</h4>
+                    在B站上自学<br>
+                    <span class="text-desc"><span th:text="${question.commentCount}"></span>个回复·<span th:text="${question.viewCount}"></span>次浏览·<span th:text="${#dates.format(question.gmtCreate, 'dd/MMM/yyyy HH:mm')}">1小时前</span></span>
                 </div>
+            </div>
 
-                <div class="form-group">
-                    <label for="tag">添加标签</label>
-                    <input type="text" class="form-control" id="tag" name="tag" placeholder="输入标签,以逗号隔开">
-                </div>
-
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="alert alert-warning alert-dismissible col-lg-9 col-md-12 col-xs-12 col-sm-12" ></div>
-                        <div class="col-lg-3 col-md-12 col-xs-12 col-sm-12">
-                            <button type="submit" class="btn btn-success btn-publish">发布</button>
-                        </div>
-                    </div>
-                </div>
-
-            </form>
         </div>
 
         <div class="col-lg-3 col-md-12 col-xs-12 col-sm-12">
